--- a/cod/config.ini
+++ b/cod/config.ini
@@ -1,6 +1,6 @@
 [wordpress]
 wp_url = https://retrov.cutacut.co.uk/ab/wp-json/utl/v1/log
-wp_user = admin
-wp_application_password = gzhu akH5 P95P 3CXI alp8 Vupu
+wp_user = abc
+wp_application_password = XYs2 rMyc UA3t uGfS 6Ck0 59OL
 wp_media_url = https://retrov.cutacut.co.uk/ab/wp-json/wp/v2/media
 
