--- a/cod/config.ini
+++ b/cod/config.ini
@@ -1,6 +1,6 @@
 [wordpress]
-wp_url = https://retrov.cutacut.co.uk/ab/wp-json/utl/v1/log
-wp_user = abc
-wp_application_password = XYs2 rMyc UA3t uGfS 6Ck0 59OL
-wp_media_url = https://retrov.cutacut.co.uk/ab/wp-json/wp/v2/media
+wp_url = https://retrov.cutacut.co.uk/tl/wp-json/utl/v1/log
+wp_user = retrov
+wp_application_password = CkZ5 caXA ifrQ EnPz 480I XkcU
+wp_media_url = https://retrov.cutacut.co.uk/tl/wp-json/wp/v2/media
 
